--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .header {
@@ -78,7 +78,6 @@ body {
 }
 
 .headline {
-  font-family: "Georgia", "Times New Roman", serif;
   font-weight: 600;
   font-size: 2.5rem;
   margin-bottom: 20px;
@@ -247,6 +246,7 @@ body {
   font-size: 1rem;
   color: #333;
   padding-bottom: 10px;
+  font-weight: 600;
 }
 
 @media (max-width: 767px) {
